wayland: Introduce internal popup event filter

The event filter allows dismissing the user actions menu by clicking
anywhere outside of it.

BUG: 428408